force-app/main/default/objects/vlocity_ps__CourtAction__c/vlocity_ps__CourtAction__c.object-meta.xml
<CustomObject>
    <label>Court Action</label>
    <nameField>
        <label>Court Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>