force-app/main/default/objects/vlocity_ps__CourtAction__c/fields/vlocity_ps__DateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateTime__c</fullName>
    <label>Court Action Date Time</label>
    <type>DateTime</type>
</CustomField>