force-app/main/default/objects/vlocity_ps__CourtAction__c/fields/vlocity_ps__InvestigationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InvestigationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ps__Incident__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Investigation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ps__Incident__c</referenceTo>
    <relationshipLabel>Court Actions</relationshipLabel>
    <relationshipName>CourtActionInvestigations</relationshipName>
    <type>Lookup</type>
</CustomField>