force-app/main/default/objects/vlocity_ps__CourtAction__c/fields/vlocity_ps__OngoingCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OngoingCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Court Actions</relationshipLabel>
    <relationshipName>CourtActionOngoingCases</relationshipName>
    <type>Lookup</type>
</CustomField>