force-app/main/default/objects/vlocity_ps__CourtAction__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Court Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Emergency Protection Order</fullName>
            </value>
            <value>
                <fullName>Dispositional Hearing</fullName>
            </value>
            <value>
                <fullName>Review Hearing</fullName>
            </value>
            <value>
                <fullName>Permanency Hearing</fullName>
            </value>
            <value>
                <fullName>Termination of Parental Rights Hearing</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>